demo-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: demo-app
spec:
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 80
